-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
there is a race between osp_statfs_timer_cb() and osp_precreate_thread() when the timer callback is called just before statfs data gets stale (according to @opd_statfs_fresh_till) and then woken osp_precreate_thread() finds statfs data valid. essentially it's early-wakeup leading stale statfs data. if no creates happen on this OST for a reason (e.g. current space usage), then statfs data won't be refreshed for a long time.
- is related to
-
LU-16685 update OSP statfs when max_create_count is set back from 0
-
- Open
-